oauth-app-example/service-with-oauth.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: mywebapp-tls
  labels:
    name: mywebapp
  name: mywebapp
spec:
  ports:
  - name: proxy
    port: 8888
    protocol: TCP
    targetPort: oauth-proxy
  - name: app
    port: 8080
    protocol: TCP
    targetPort: mywebapp
  selector:
    name: mywebapp
  sessionAffinity: None
  type: ClusterIP
